--- a/generic.html
+++ b/generic.html
@@ -26,7 +26,7 @@
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="generic.html">About Managing Partners</a></li>
-            <li><a href="elements.html">Elements</a></li>
+            <!--   <li><a href="elements.html">Elements</a></li>  -->
         </ul>
     </nav>
 
