--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="links">
             <li><a href="index.html">Home</a></li>
             <li><a href="generic.html">About Managing Partners</a></li>
-            <li><a href="elements.html">Elements</a></li>
+            <!--       <li><a href="elements.html">Elements</a></li> Nav -->
         </ul>
     </nav>
 
@@ -175,18 +175,20 @@
                                 <label for="email">Email</label>
                                 <input name="email" id="email" type="email" placeholder="Email">
                             </div>
-                            <div class="field">
-                                <label for="dept">Department</label>
-                                <div class="select-wrapper">
-                                    <select name="dept" id="dept">
+                            <!--
+<div class="field">
+    <label for="dept">Department</label>
+    <div class="select-wrapper">
+        <select name="dept" id="dept">
 												<option value="">- Category -</option>
 												<option value="1">Manufacturing</option>
 												<option value="1">Shipping</option>
 												<option value="1">Administration</option>
 												<option value="1">Human Resources</option>
 											</select>
-                                </div>
-                            </div>
+    </div>
+</div>
+-->
                             <div class="field">
                                 <label for="message">Message</label>
                                 <textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
