--- a/generic.html
+++ b/generic.html
@@ -46,6 +46,7 @@
                     <h4>Kapil Rastogi, CFA:</h4>
                     <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
                     <h4>Murat Unluer:</h4>
+
                     <p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p>
                 </div>
             </div>
@@ -103,7 +104,7 @@
             <section>
                 <div class="box">
                     <div class="content">
-                        <h2 class="align-center">Get in Touch</h2>
+                        <h2 class="align-center">Reach us At </h2>
                         <hr />
                         <form action="#" method="post">
                             <div class="field half first">
