--- a/generic.html
+++ b/generic.html
@@ -43,8 +43,15 @@
                         <p>Biography of Managing Partners</p>
                     </header>
                     <hr />
+
                     <h4>Kapil Rastogi, CFA:</h4>
-                    <p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada. Praesent in sem ex. Morbi mattis sapien pretium tellus venenatis, at egestas urna ornare.</p>
+                    My contact details are
+                    <ul>
+                        <li>email : <a href="mailto: kapil.rastogi@pluspluscapital.com">kapil.rastogi@pluspluscapital.com</a>
+                        </li>
+                        <li>Address: 201 Montgomery St, 2nd floor, Jersey City NJ - 07302
+                        </li>
+                    </ul>
                     <h4>Murat Unluer:</h4>
 
                     <p>Vivamus fermentum nibh vel pharetra blandit. Cras a purus urna. Sed et libero ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse id hendrerit felis. Nulla viverra tempor dui at congue. Pellentesque quis nulla ornare, congue nisi id, finibus nulla. Aliquam sit amet hendrerit purus. Donec libero massa, posuere fermentum eros sit amet, maximus fringilla augue. Maecenas at rhoncus lorem. Vivamus ultricies consequat est, efficitur convallis libero. Vivamus rutrum semper mauris, vitae consequat eros tempor ac. Pellentesque et ornare sapien</p>
@@ -104,7 +111,7 @@
             <section>
                 <div class="box">
                     <div class="content">
-                        <h2 class="align-center">Reach us At </h2>
+                        <h2 class="align-center">Contact Us</h2>
                         <hr />
                         <form action="#" method="post">
                             <div class="field half first">
