background image added and modified

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 			formats to work correctly.
 		-->
+    <!-- <section id="banner" data-video="images/banner"> -->
     <section id="banner" data-video="images/banner">
         <div class="inner">
             <h1>Plus Plus Capital Management</h1>
@@ -51,7 +52,7 @@
             <div>
                 <div class="box">
                     <div class="image fit">
-                        <img src="images/pic01.jpg" alt="" />
+                        <img src="images/banner.jpg" alt="" />
                     </div>
                     <div class="content">
                         <header class="align-center">
