--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <!-- Header -->
     <header id="header" class="alt">
         <div class="logo"><a href="index.html">PlusPlus Capital Management <span> UNCORRELATED ALPHA</span></a></div>
-        <a href="#menu" class="toggle"><span>Menu</span></a>
+        <!--  <a href="#menu" class="toggle"><span>Menu</span></a> -->
     </header>
 
     <!-- Nav -->
-    <nav id="menu">
+    <!--<nav id="menu">
         <ul class="links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="generic.html">About Managing Partners</a></li>
-            <!--       <li><a href="elements.html">Elements</a></li> Nav -->
+             <li><a href="generic.html">About Managing Partners</a></li>
+                 <li><a href="elements.html">Elements</a></li> Nav 
         </ul>
-    </nav>
+    </nav> -->
 
     <!-- Banner -->
     <!--
@@ -52,7 +52,7 @@
             <div>
                 <div class="box">
                     <div class="image fit">
-                        <img src="images/banner.jpg" alt="" />
+                        <img src="images/pic01.jpg" alt="" />
                     </div>
                     <div class="content">
                         <header class="align-center">
