--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <!-- Header -->
     <header id="header" class="alt">
-        <div class="logo"><a href="index.html">PlusPlus Capital Management <span> UNCORRELATED ALPHA</span></a></div>
+        <div class="logo">
+            <a href="index.html"> <span> </span></a>
+        </div>
         <!--  <a href="#menu" class="toggle"><span>Menu</span></a> -->
     </header>
 
@@ -39,8 +41,8 @@
     <!-- <section id="banner" data-video="images/banner"> -->
     <section id="banner" data-video="images/banner">
         <div class="inner">
-            <h1>Plus Plus Capital Management</h1>
-            <p>UNCORRELATED ALPHA<br /> </p>
+            <h1></h1>
+            <p><br /> </p>
             <!--built by <a href="https://templated.co/">Templated</a> and released under the <a href="https://templated.co/license">Creative Commons</a>.</p> -->
             <a href="#one" class="button special scrolly">Get Started</a>
         </div>
